--- a/test-output/old/Functional Suite/methods-alphabetical.html
+++ b/test-output/old/Functional Suite/methods-alphabetical.html
@@ -1,28 +1,30 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Functional Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="9588e6">  <td>20/07/03 11:30:41</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestCase1.closeBrowser()[pri:0, instance:testcases.TestCase1@6e6f2380]">&lt;&lt;closeBrowser</td> 
-<td>&nbsp;</td>  <td>main@2095064787</td>   <td></td> </tr>
-<tr bgcolor="9588e6">  <td>20/07/03 11:30:41</td>   <td>19</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestCase1.closeBrowser()[pri:0, instance:testcases.TestCase1@6e6f2380]">&lt;&lt;closeBrowser</td> 
-<td>&nbsp;</td>  <td>main@2095064787</td>   <td></td> </tr>
-<tr bgcolor="9588e6">  <td>20/07/03 11:30:41</td>   <td>21</td> <td>&nbsp;</td><td title="&lt;&lt;TestCase1.closingDBConn()[pri:0, instance:testcases.TestCase1@6e6f2380]">&lt;&lt;closingDBConn</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@2095064787</td>   <td></td> </tr>
-<tr bgcolor="9588e6">  <td>20/07/03 11:30:41</td>   <td>-53</td> <td>&nbsp;</td><td title="&gt;&gt;TestCase1.creatingDBConn()[pri:0, instance:testcases.TestCase1@6e6f2380]">&gt;&gt;creatingDBConn</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@2095064787</td>   <td></td> </tr>
-<tr bgcolor="9588e6">  <td>20/07/03 11:30:41</td>   <td>3</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestCase1.doLogin()[pri:2, instance:testcases.TestCase1@6e6f2380]">doLogin</td> 
-  <td>main@2095064787</td>   <td></td> </tr>
-<tr bgcolor="9588e6">  <td>20/07/03 11:30:41</td>   <td>-13</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestCase1.doUserReg()[pri:1, instance:testcases.TestCase1@6e6f2380]">doUserReg</td> 
-  <td>main@2095064787</td>   <td></td> </tr>
-<tr bgcolor="8685fd">  <td>20/07/03 11:30:42</td>   <td>446</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestCase3.doUserReg()[pri:1, instance:testcases.TestCase3@75437611]">doUserReg</td> 
-  <td>main@2095064787</td>   <td></td> </tr>
-<tr bgcolor="8685fd">  <td>20/07/03 11:30:42</td>   <td>489</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestCase3.fourthTest()[pri:4, instance:testcases.TestCase3@75437611]">fourthTest</td> 
-  <td>main@2095064787</td>   <td></td> </tr>
-<tr bgcolor="9588e6">  <td>20/07/03 11:30:41</td>   <td>-13</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestCase1.launchBrowser()[pri:0, instance:testcases.TestCase1@6e6f2380]">&gt;&gt;launchBrowser</td> 
-<td>&nbsp;</td>  <td>main@2095064787</td>   <td></td> </tr>
-<tr bgcolor="9588e6">  <td>20/07/03 11:30:41</td>   <td>3</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestCase1.launchBrowser()[pri:0, instance:testcases.TestCase1@6e6f2380]">&gt;&gt;launchBrowser</td> 
-<td>&nbsp;</td>  <td>main@2095064787</td>   <td></td> </tr>
-<tr bgcolor="8685fd">  <td>20/07/03 11:30:42</td>   <td>469</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestCase3.thirdTest()[pri:3, instance:testcases.TestCase3@75437611]">thirdTest</td> 
-  <td>main@2095064787</td>   <td></td> </tr>
-<tr bgcolor="a9d798">  <td>20/07/03 11:30:42</td>   <td>348</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestCase2.validateTitles()[pri:0, instance:testcases.TestCase2@3a7442c7]">validateTitles</td> 
-  <td>main@2095064787</td>   <td></td> </tr>
+<tr bgcolor="b3eeae">  <td>20/07/03 18:43:01</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestCase1.closeBrowser()[pri:0, instance:testcases.TestCase1@2e8c1c9b]">&lt;&lt;closeBrowser</td> 
+<td>&nbsp;</td>  <td>main@2081652693</td>   <td></td> </tr>
+<tr bgcolor="b3eeae">  <td>20/07/03 18:43:01</td>   <td>21</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestCase1.closeBrowser()[pri:0, instance:testcases.TestCase1@2e8c1c9b]">&lt;&lt;closeBrowser</td> 
+<td>&nbsp;</td>  <td>main@2081652693</td>   <td></td> </tr>
+<tr bgcolor="b3eeae">  <td>20/07/03 18:43:01</td>   <td>22</td> <td>&nbsp;</td><td title="&lt;&lt;TestCase1.closingDBConn()[pri:0, instance:testcases.TestCase1@2e8c1c9b]">&lt;&lt;closingDBConn</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@2081652693</td>   <td></td> </tr>
+<tr bgcolor="b3eeae">  <td>20/07/03 18:43:01</td>   <td>-129</td> <td>&nbsp;</td><td title="&gt;&gt;TestCase1.creatingDBConn()[pri:0, instance:testcases.TestCase1@2e8c1c9b]">&gt;&gt;creatingDBConn</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@2081652693</td>   <td></td> </tr>
+<tr bgcolor="b3eeae">  <td>20/07/03 18:43:01</td>   <td>16</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestCase1.doLogin()[pri:2, instance:testcases.TestCase1@2e8c1c9b]">doLogin</td> 
+  <td>main@2081652693</td>   <td></td> </tr>
+<tr bgcolor="737b89">  <td>20/07/03 18:43:02</td>   <td>571</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestFailure.doLogin()[pri:0, instance:testcases.TestFailure@2d901eb0]">doLogin</td> 
+  <td>main@2081652693</td>   <td></td> </tr>
+<tr bgcolor="b3eeae">  <td>20/07/03 18:43:01</td>   <td>-21</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestCase1.doUserReg()[pri:1, instance:testcases.TestCase1@2e8c1c9b]">doUserReg</td> 
+  <td>main@2081652693</td>   <td></td> </tr>
+<tr bgcolor="8ff096">  <td>20/07/03 18:43:02</td>   <td>516</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestCase3.doUserReg()[pri:1, instance:testcases.TestCase3@1c5920df]">doUserReg</td> 
+  <td>main@2081652693</td>   <td></td> </tr>
+<tr bgcolor="8ff096">  <td>20/07/03 18:43:02</td>   <td>526</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestCase3.fourthTest()[pri:4, instance:testcases.TestCase3@1c5920df]">fourthTest</td> 
+  <td>main@2081652693</td>   <td></td> </tr>
+<tr bgcolor="b3eeae">  <td>20/07/03 18:43:01</td>   <td>-21</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestCase1.launchBrowser()[pri:0, instance:testcases.TestCase1@2e8c1c9b]">&gt;&gt;launchBrowser</td> 
+<td>&nbsp;</td>  <td>main@2081652693</td>   <td></td> </tr>
+<tr bgcolor="b3eeae">  <td>20/07/03 18:43:01</td>   <td>15</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestCase1.launchBrowser()[pri:0, instance:testcases.TestCase1@2e8c1c9b]">&gt;&gt;launchBrowser</td> 
+<td>&nbsp;</td>  <td>main@2081652693</td>   <td></td> </tr>
+<tr bgcolor="8ff096">  <td>20/07/03 18:43:02</td>   <td>524</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestCase3.thirdTest()[pri:3, instance:testcases.TestCase3@1c5920df]">thirdTest</td> 
+  <td>main@2081652693</td>   <td></td> </tr>
+<tr bgcolor="74a2c7">  <td>20/07/03 18:43:01</td>   <td>401</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestCase2.validateTitles()[pri:0, instance:testcases.TestCase2@548d708a]">validateTitles</td> 
+  <td>main@2081652693</td>   <td></td> </tr>
 </table>
