--- a/test-output/old/Functional Suite/toc.html
+++ b/test-output/old/Functional Suite/toc.html
@@ -8,9 +8,9 @@
 <h3><p align="center">Results for<br/><em>Functional Suite</em></p></h3>
 <table border='1' width='100%'>
 <tr valign='top'>
-<td>3 tests</td>
-<td><a target='mainFrame' href='classes.html'>3 classes</a></td>
-<td>7 methods:<br/>
+<td>4 tests</td>
+<td><a target='mainFrame' href='classes.html'>4 classes</a></td>
+<td>8 methods:<br/>
 &nbsp;&nbsp;<a target='mainFrame' href='methods.html'>chronological</a><br/>
 &nbsp;&nbsp;<a target='mainFrame' href='methods-alphabetical.html'>alphabetical</a><br/>
 &nbsp;&nbsp;<a target='mainFrame' href='methods-not-run.html'>not run (0)</a></td>
@@ -24,6 +24,14 @@
 <tr><td>
 <table style='width: 100%'><tr><td valign='top'>Dependency Test (2/1/1)</td><td valign='top' align='right'>
   <a href='Dependency Test.html' target='mainFrame'>Results</a>
+</td></tr></table>
+</td></tr><p/>
+</table>
+
+<table width='100%' class='test-failed'>
+<tr><td>
+<table style='width: 100%'><tr><td valign='top'>Failure Test (0/1/0)</td><td valign='top' align='right'>
+  <a href='Failure Test.html' target='mainFrame'>Results</a>
 </td></tr></table>
 </td></tr><p/>
 </table>
